--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,16 @@
                     <artifactId>spring-boot-starter-test</artifactId>
                     <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-jdbc</artifactId>
+                <version>0.1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jscience</groupId>
+                <artifactId>jscience</artifactId>
+                <version>4.3.1</version>
+            </dependency> 
     </dependencies>
 
     <build>
